# align-cuda

./: CMakeLists copy.txt  CMakeLists.txt  README.md  align.cu  main.cu  main.cu.back  test.py
